<resources>
    <string name="content_description_close">Close callout</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="title_activity_baseactivity">baseactivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="vision_not_supported_title">Device is not supported</string>
    <string name="vision_not_supported_message">Vision SDK does not support this device yet, check more details at &lt;a href=\"https://docs.mapbox.com/android/vision/overview/#requirements\">docs.mapbox.com&lt;/a></string>
    <string name="app_name">한국공학대학교</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="unUser">비회원으로 시작하기</string>
    <string name="NewUser">회원가입</string>
    <string name="Login">로그인</string>
    <string name="e">공학관 E동</string>
    <string name="tip">TIP 생활관</string>
    <string name="second">제 2기숙사</string>
    <string name="food">학교\n식당 소개</string>
    <string name="TIP_F">TIP 지하 식당</string>
    <string name="E_F">E동 교직원 식당</string>
    <string name="room2">[2인실]</string>
    <string name="room4">[4인실]</string>
    <string name="library">도서관</string>
    <string name="ar_navigation">AR 길찾기</string>
    <string name="ar_model">Model House</string>
    <string name="ar_guide">한국공학대\n캠퍼스가이드</string>
    <string name="major">학과 소개</string>
    <string name="shuttlebus">정왕역\n셔틀버스</string>
    <string name="search">공학관, 건물을 입력하세요.</string>
    <string name="tipdomi_info1">TIP 생활관은 1,400 여명이 함께 생활할 수 있는 호텔수준의 거주공간으로 교육과 연구개발에만 전념할 수 있도록 최적의 환경을 제공하고 있습니다.\n2인실과 원룸형 4인실이 있습니다.</string>
    <string name="tipdomi_info2">B1층: TIP 지하식당, 아트센터\n1층: TIP 라운지, GS25, 쥬씨, TIP 푸드라운지, 토스피아, 파리바게뜨, 신불떡볶이, 일광서점, 세탁소 \n2층: 퓨처 VR랩 라운지, 올리브그린\n3층: 라운지, 창업센터, 연구실\n6층:흡연구역, 스포츠플라자, TIP 스프린골프 \n7~17층: 생활관</string>
    <string name="secondomi_info1">제2생활관은 특화기숙사로 운영되며 신입생을 위한 Mentor-Mentee 생활관과 재학생(취업 및 창업 프로그램을 많이 참여한 학생)을 위한 취업 및 창업 생활관으로 운영 됩니다.\n2인실과 원룸형 4인실이 있습니다.</string>
    <string name="secondomi_info2">1층: 취업진로팀, 사감실, 시설관리사무소, 라운지 등\n2층: 학생상담센터, 라운지, 취식공간, Open 라운지 등\n3~15층: 생활관, 다목적실, 세탁실, 휴게실, Study Room \n홀수층: 세탁실, 다목적실\n짝수층: 휴게실, 다목적실</string>
    <string name="engineering_e_info1">공학관 E동은 SW 대학 소속인 컴퓨터 공학부와\n게임 공학부 학생들이 수업을 듣는 공학관으로,\n주로 컴퓨터공학부, 게임공학부 교수님들의\n연구실이 위치해있습니다.</string>
    <string name="engineering_e_info2">1층: 교직원 식당, 대강당, 대학원 교학팀 사무실, 소강당\n2층: i STUDIO\n5층: 라운지 E룸</string>
    <string name="library_info">도서관은 종합교육관에 위치해있는 한국공학대학교의 도서관으로 1998년 설립 초기부터 실사구시의 학문구현을 목표로 하는 건학 이념에 맞춰 개관을 하였으며, 현재 약 18만 여권의 장서를 보유하고 있습니다.\n 신속한 서비스를 위하여 차세대 전자도서관 솔루션인 SOLARS 시스템을 새로이 구축하였습니다. SOLARS에는 전자저널, 웹DB, E-book, 사이버학습관, 외부접속시스템 등 최신정보 와 신기술을 적극 도입함으로써 정보화 시대에 발맞추고 동시에 이용자의 정보욕구를 최대한 충족시키고자 합니다.\n
또한 산업단지라는 지역의 특수성과 산학협력을 기반으로 한 우리 대학의 특성화된 운영이념에 걸맞도록 산업기술자료실을 구축하여 우리대학은 물론 가족회사를 포함한 지역산업체의 발전을 도모하고자 합니다.</string>
    <string name="library_2">도서관 2층</string>
    <string name="library_3">도서관 3층</string>
    <string name="finish">완료</string>
    <string name="computer">컴퓨터공학부</string>
    <string name="design">디자인공학부</string>
    <string name="mechanical">기계공학과</string>
    <string name="bio_chemi">생명화학공학과</string>
    <string name="mecha_design">기계설계공학과</string>
    <string name="mechatronics">메카트로닉스공학부</string>
    <string name="electronics">전자공학부</string>
    <string name="game">게임공학과</string>
    <string name="advancd_m">신소재공학과</string>
    <string name="nano">나노반도체공학과</string>
    <string name="energy">에너지전기공학과</string>
    <string name="business_admin">경영학부</string>
    <string name="computer_info">컴퓨터공학전공: 정보화 사회를 주도할 핵심 분야로서 컴퓨터 공학의 기본 지식부터 첨단 기술 영역에서 사용되는 이론까지 실습을 통해 다양하게 배웁니다.\n\n소프트웨어전공: 첨단 IT 지식과 창의적 SW역량, 글로벌 비전을 가지고 현재와 미래의 소프트웨어 수요에 부응하는 글로벌 전문가 양성을 교육 목표로 합니다.\n\n학과 사무실\n위치:E동 309호\n전화번호: 031-8041-0510~1</string>
    <string name="design_info">산업디자인공학전공: 사용자 리서치, 사용자 경험과 인터렉션, 제품 기획, 디자인 개발, 2D/3D 설계 시뮬레이션 기술을 통합적으로 활용할 수 있는 인재를 양성합니다.\n\n미디어디자인공학전공: 앱/웹 사용자 조사와 분석, UX/UI, 콘텐츠 기획, 2D/3D 그래픽 디자인, 프로그래밍 개발과정을 수행할 수 있는 디자이너를 양성합니다.\n\n학과 사무실\n위치:A동 407호\n전화번호:031-8041-0660</string>
    <string name="mechanical_info">기계공학은 자동차, 조선, 플랜트 등과 같은 전통 산업에서 정보통신, 바이오, 항공우주, 에너지 등과 같은 첨단 신산업에 이르기까지 산업의 전 영역을 책임지고 있습니다.\n 최근 기술간 학제간 융합을 통한 미래 신성장동력 창출의 중추로서 기계공학의 중요성이 더해지고 있습니다.\n\n학과 사무실\n위치:공학관 A동 210호\n전화번호: 031-8041-0400~1</string>
    <string name="mechatronics_info">메카트로닉스전공: 스마트 제조 장비, 자동차, 로봇과 같은 고성능 기계시스템을 설계, 제작하고 전자제어와 지능 프로그래밍을 수행하는 학문입니다.\n\nAI로봇전공: 로봇, 스마트 팩토리 등 산업에서 요구하는 각종 H/W와 S/W 기술을 인공지능과 융합하는 기술을 교육합니다.\n\n학과 사무실\n위치:공학관 B동 307호\n전화번호:031-8041-0450</string>
    <string name="mecha_design_info">기계설계공학과에서는 현대의 산업에서 필요로 하는 기계공학전반의 기초학문 및 실용학문을 교육함으로써,\n 설계 및 생산과정을 이해하고 거시적인 안목으로 창의적인 기계설계를 할 수 있는 전문 엔지니어 양성에 목표를 두고 있습니다.\n\n학과 사무실\n위치:공학관 B동 219호\n전화번호:031-8041-0420</string>
    <string name="advanced_m_info">신소재공학과는 21세기 기술 발전의 초석인 소재 산업 및 학문의 기술 경쟁력을 선도할 공학도를 양성하기 위한 비전을 갖고 성장을 거듭해왔습니다.\n 현대 기술 기반 사회에서 요구하는 소재 산업의 기술적 방향은 점차 고도화되고 융합화되고 있으므로 신소재공학은 최첨단 기술을 선도할 수 있는 유망한 학문입니다.\n\n학과 사무실\n위치:공학관 D동 208호\n전화번호:031-8041-0580</string>
    <string name="nano_info">나노반도체공학은 4차 산업혁명의 대표 분야인 자율주행자동차, 사물인터넷, 빅데이터, 인공지능 등을 실현하기 위한 하드웨어 부문의 핵심 기반 기술입니다.\n 나노반도체공학과는 디스플레이/센서/집적회로 관련 반도체 소자 및 공정을 개발하는 반도체 융합기술 분야 AR/VR 기기, 초소형 카메라, LiDAR와 같은 첨단 광학응용기기를 개발하고 나노미터 수준에서 빛을 조절하기 위한 미세 구조를 연구하는 나노광융합기술 분야의 창의적 인재 양성을 목표로 하고 있습니다.\n\n학과 사무실\n위치:공학관 P동 515호\n전화번호:031-8041-0710</string>
    <string name="game_info">21세기 첨단 문화콘텐츠의 꽃인 미래 게임 문화 산업이 요구하는 예술성, 기술성, 창의성, 아이디어를 갖추고 게임소프트웨어 개발, 게임장비 개발, 게임 콘텐츠 등과 같은 디지털 게임을 제작하는 데 필요한 기술의 결합 능력을 육성하기 위해 게임 프로그래밍, 미디어 융합 등 다양한 컴퓨팅 기술을 습득할 수 있는 체계적인 이론 지식과 함께 실무 능력을 배양하고 있습니다.\n\n학과 사무실\n위치:공학관 E동 311호\n전화번호:031-8041-0550</string>
    <string name="electronics_info">전자공학전공: 다양한 제품들을 연구, 개발하는 학문으로 전자 및 정보통신 기술을 바탕으로 IT 기술을 융합하는 법을 학습합니다.\n\n임베디드시스템전공: 하드웨어와 소프트웨어가 결합한 생각하는 하드웨어 시스템을 개발할 수 있는 핵심 기술인재를 양성합니다.\n\n학과 사무실\n위치:산학융합본부 519호\n전화번호:031-8041-0470~1</string>
    <string name="energy_info">에너지전기공학과는 태양, 풍, 연료전지 등 신재생에너지를 통한 전력생산, 에너지 저장장치(ESS)의 활용, 정보통신기술(ICT)을 이용한 에너지관리시스템(EMS)운용 등 미래 지능형 전력망과 관련된 교육과 연구에 앞장서고 있습니다.\n 신재생에너지 및 전력 분야 교육을 통해 국가와 세계를 이끌어 갈 전인적이고 창의적인 인재 양성을 목표로 삼고 있습니다.\n\n학과사무실\n위치:공학관 C동 304호\n전화번호:031-8041-0690</string>
    <string name="business_admin_info">산업경영전공: 급변하는 사회 및 기업환경 속에서 발생한 사례들을 통해 이론을 실무에 적용해 풀어나가는 경쟁력 있는 기업 현장 중심의 전문가를 양성합니다.\n\nIT경영전공: 최신 정보통신기술을 기업 경영에 활용해 신규 비즈니스를 창출할 인재를 양성합니다.\n\n학과 사무실\n위치:공학관 G동 315호\n전화번호:031-8041-0760</string>
    <string name="bio_chemi_info"> 생명화학공학과의 학습 목표는 생명공학 및 화학공학 분야의 산업적 요구에 맞는 고부가 가치의 첨단 기능성 소재 개발 및 생산 인력 양성입니다.\n 따라서 생명화학공학과에서는 첨단 기능성 소재 제품화에 필요한 공정개발, 분리 및 정제, 분석, 품질관리 등에 대해 중점 학습합니다.\n\n학과 사무실\n위치:공학관 D동 310호\n전화번호:031-8041-0610</string>
    <string name="future">졸업 후 진로</string>
    <string name="tip_tel">TIP 사감실: 031-8041-1030</string>
    <string name="second_tel">제2기숙사 사감실: 031-8041-1021</string>
    <string name="second_tel2">제2기숙사 시설관리팀: 031-8041-1026</string>
    <string name="foodrestaurant">식당</string>
    <string name="caferestaurant">카페&amp;베이커리</string>
    <string name="food_index">- 학생식당\n- TIP 푸드라운지\n- OG BURGER\n- 나드리김밥\n- 토마토도시락\n- 라온식당\n- 신불떡볶이\n- 올리브그린\n- 하나비\n- 한스델리\n- 교직원식당</string>
    <string name="cafe_index">- 파리바게뜨\n- 쥬씨\n- 카페토스피아\n- 스터디매점\n- ZOO COFFEE</string>
    <string name="raon">라온식당</string>
    <string name="tipfood">TIP 푸드라운지</string>
    <string name="sinbul">신불떡볶이</string>
    <string name="olive">올리브그린</string>
    <string name="hanabi">하나비</string>
    <string name="hansdeli">한스델리</string>
    <string name="e_food">교직원 식당</string>
    <string name="og">OG BURGER</string>
    <string name="nadri">나드리김밥</string>
    <string name="tomato">토마토도시락</string>
    <string name="paris">파리바게뜨</string>
    <string name="juicy">Juicy(쥬씨)</string>
    <string name="tospia">카페토스피아</string>
    <string name="dayday">스터디매점</string>
    <string name="zoo">ZOO COFFEE</string>
    <string name="tip_b1">TIP 지하 1층</string>
    <string name="tip_1">TIP 1층</string>
    <string name="tip_2">TIP 2층</string>
    <string name="raon_info"> 라온식당은 다양한 찌개, 덮밥, 분식 등을 판매합니다.\n학교 안에 있는 식당 중 가장 인기있는 식당입니다.\n\n주력메뉴: 순두부찌개, 주먹밥, 라면, 볼케이노치밥 \n\n위치: 종합교육관 1층\n학기 중 운영시간: 09시00분~20시00분</string>
    <string name="e1">E동 1층</string>
    <string name="sanyoong">산학융합관 1층</string>
    <string name="subway4">4호선\n시간표</string>
    <string name="subway_suin">수인분당선\n시간표</string>
    <string name="week">셔틀버스 시간표[평일]</string>
    <string name="weekend">셔틀버스 시간표[주말]</string>
    <string name="start_navigation">Navi</string>
    <string name="arnavi">AR</string>
    <string name="busstop">셔틀버스 탑승장</string>
    <string name="pin">1번: 평일 17시 이전과 주말\n2번: 평일 17시 이후 \n3번:하교 탑승장, 시흥비즈니스 센터 앞 </string>
    <string name="arbusstop">셔틀버스 탑승장 거리뷰</string>
    <string name="game_view_content_description">게임 보기</string>
    <string name="reading1_2">열람석\n- 칸막이 열람석 226석 칸막이 열람석 60석\n이용방법\n- 스마트폰 앱(스마트KPU)이용 NFC 좌석배정으로 해당좌석 배정 후 이용\n개실시간\n- 연중 무휴 개관 : 06 : 30 ~ 23 : 00</string>
    <string name="chaeum">열람석\n- 오픈 열람석 74석\n이용방법\n- 토론 및 대화 등의 약간의 소음 허용되는 자율학습공간\n- 좌석 배정 없이 자유 열람\n- 간단한 음료 취식 가능(도시락, 라면 등의 음식 취식 불가)\n개실시간\n- 평일 09:30~22:00 토요일 09:30~12:30, 공휴일 휴실(방학 중 09:30~17:30)</string>
    <string name="group_study">열람석\n- 12인실 1실, 10인실 5실\n이용방법\n- 스마트폰 앱(스마트KPU)이용 NFC 좌석배정으로 해당 날짜 및 실 예약\n- 공동학습자 학번 모두 입력\n- 해당 시간 도서관 3층 대출대에 개실 요청\n개실시간\n- 평일 9:30 ~ 21:30 토요일, 공휴일 휴실(방학중 09:30~17:30)</string>
    <string name="readingroom">제1일반열람실, 제2일반열람실</string>
    <string name="g_study_room">그룹 스터디룸</string>
    <string name="chaeuum">채움(스터디 라운지)</string>
    <string name="library_tel">문의처: 031-8041-0782</string>
    <string name="library_redaing">자료열람실</string>
    <string name="multimedia">멀티미디어실</string>
    <string name="raum">라움</string>
    <string name="raum_info">이용방법\n- 다목적복합공간 및 자율학습공간\n- 좌석 배정 없이 자유 열람\n개실시간\n- 평일 09:30~22:00 토요일 9:30~12:30 일요일, 공휴일 휴실(방학중 09:30~17:30)</string>
    <string name="multimedia_info">이용장비\n- PC 14대, 큐브 복합기 1대\n이용방법\n- 좌석 배정 없이 자유 열람\n개실시간\n- 평일 09:30~21:30 토요일, 공휴일 휴실(방학중 평일 09:30~17:30)</string>
    <string name="library_redaing_info">자료이용방법\n1) 자료검색 후 청구기호에 따라 소장위치 파악\n2) 해당서가에서 도서를 찾음\n3) 열람실 좌석에서 열람\n4) 열람한 자료를 원래자리에 꽂아둠\n주요서비스\n- 자료열람\n- 공부\n- 대출을 원할 때에는 카운터에 대출을 원하는 자료와 함께 학생증이나 이용증을 제시\n개실시간\n- 학기중: 평일 09:30~22:00 / 토 09:30~12:30 (공휴일 휴실)\n- 방학중: 평일 09:30~17:30 (공휴일 휴실)</string>
    <string name="ebook">전자책 도서관</string>
    <string name="climb">교내 클라이밍장</string>
    <string name="climb_info">교내 클라이밍장은 종합관과 체육관 사이에 위치해 있으며 동아리 산사람이 관리합니다.\n클라이밍장에는 앞 마당에 헬스 기구들과 철봉, 덤벨, 샌드백이 있으며, 남자 탈의실과 여자 탈의실이 위치해 있습니다.\n내부 클라이밍장에는 직벽과 오버행이 각각 반대편에 위치해 많은 인원이 함께 클라이밍을 즐길 수 있습니다.</string>
    <string name="paris_info">파리바게뜨는 프랜차이즈 베이커리카페로 다양한 제과제빵 및 음료메뉴를 판매합니다.\n\n위치: TIP 1층\n운영시간\n매일:07:00~21:00 </string>
    <string name="tele">전화번호안내</string>
    <string name="cam1">제1캠퍼스 층별 안내</string>
    <string name="info">Info</string>
    <string name="facility">편의시설</string>
    <string name="way">찾아오시는 길</string>
    <string name="branding">홍보 및 미디어</string>
</resources>