<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"

    tools:context=".guide_info">

    <TextView
        android:id="@+id/textView115"
        android:layout_width="197dp"
        android:layout_height="68dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="90dp"
        android:layout_marginTop="80dp"
        android:gravity="center"

        android:text="@string/info"
        android:textAlignment="gravity"
        android:textColor="@color/tu_blue"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView70" />

    <Button
        android:id="@+id/button33"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/tu_blue"
        android:text="@string/branding"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button29" />

    <ImageView
        android:id="@+id/imageView70"
        android:layout_width="330dp"
        android:layout_height="79dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/signature_kor" />

    <Button
        android:id="@+id/button29"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/tu_blue"
        android:text="@string/way"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button32" />

    <Button
        android:id="@+id/button32"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/tu_blue"
        android:text="@string/cam1"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button31" />

    <Button
        android:id="@+id/button31"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="250dp"
        android:backgroundTint="@color/tu_blue"
        android:text="@string/tele"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>