<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Non_member_menu"
    android:background="#FFFFFFFF">


    <Button
        android:id="@+id/button15"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/white"
        android:drawableTop="@drawable/ic_baseline_school_24"
        android:text="@string/major"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <Button
        android:id="@+id/button14"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/white"
        android:drawableTop="@drawable/ic_baseline_restaurant_24"
        android:text="@string/food"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/button12"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/button10"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/white"
        android:drawableTop="@drawable/ic_baseline_location_on_24"
        android:text="@string/ar_navigation"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/button11"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/white"
        android:drawableTop="@drawable/ic_baseline_home_work_24"
        android:text="@string/ar_model"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/button12"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/white"
        android:drawableTop="@drawable/ic_baseline_map_24"
        android:text="@string/ar_guide"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:contentDescription="TODO"
        android:src="@drawable/signature_kor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/white"
        android:text="@string/Login"
        android:textColor="@color/tu_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/button15"
        app:layout_constraintTop_toBottomOf="@+id/button14" />

</androidx.constraintlayout.widget.ConstraintLayout>